# LORIS-MRI

./: pyproject.toml
.github/workflows/: integration.yml
dicom-archive/.loris_mri/: prod
docs/python/: Packaging.md
install/: imaging_install.sh  imaging_install_MacOSX.sh
install/templates/: environment_template
python/lib/: bidsreader.py  eeg.py  imaging.py  mri.py  physiological.py  util.py
python/lib/database_lib/: parameter_type.py
python/lib/db/models/: file.py  physio_task_event.py
python/lib/db/queries/: file.py
python/lib/dcm2bids_imaging_pipeline_lib/: nifti_insertion_pipeline.py
python/lib/imaging_lib/: file_parameter.py  nifti_pic.py
python/lib/import_bids_dataset/: channels.py  check_sessions.py  check_subjects_sessions.py  copy_files.py  events.py  events_tsv.py  info.py  json.py  main.py  meg.py  meg_channels.py  mri.py  scans.py
python/lib/physio/: chunking.py  file_parameters.py
python/loris_bids_reader/src/loris_bids_reader/: dataset.py  info.py  reader.py  tsv_scans.py
python/loris_bids_reader/src/loris_bids_reader/files/: participants.py
python/loris_bids_reader/src/loris_bids_reader/mri/: data_type.py
python/loris_meg/src/loris_meg/: main.py
python/loris_module_ephys_viewer/: pyproject.toml
python/loris_module_ephys_viewer/src/loris_module_ephys_viewer/: main.py
python/scripts/: bids_import.py  extract_eeg_bids_archive.py
test/: imaging_install_test.sh  test_s3fs.Dockerfile
tools/cbig/mpn/: import_bids_dataset
